# methane_pinns_practice

./: 20240809_methane_pinn.ipynb  20240820_methane_pinn copy.ipynb  20240820_methane_pinn.ipynb  20240820_methane_pinn_this_morning.ipynb  pde_solver.py  pde_strategy.py  pde_strategy_test.py  pip.txt  poisson_test.ipynb  pyproject.toml  test.ipynb  test_Andy.ipynb  visualize_4_5d.m
visualization/: visualize_4_5d.m  visualize_5d.m  visualize_5d_exportapp.asv  visualize_5d_exportapp.m
